<resources>
    <string name="app_name">SessionManager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">eve.holt@reqres.in</string>
    <string name="prompt_password_register">pistol</string>
    <string name="prompt_password_login">cityslicka</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 6 characters long</string>
    <string name="empty_email_or_password">Either email or password is empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="launcher">launcher</string>
    <string name="text_ok">OK</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="logout">LOGOUT</string>
</resources>